feat: added endpoint to list versions, tests and other fixes
